--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body,
-:root{
+:root {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -20,26 +20,32 @@ body,
 .leaflet-bottom,
 .leaflet-control,
 .leaflet-pane,
-.leaflet-top{
+.leaflet-top {
   z-index: 0 !important;
 }
 
-#style-2::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: transparent;
+#style-2::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: transparent;
 }
 
-#style-2::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: transparent;
+#style-2::-webkit-scrollbar {
+  width: 12px;
+  background-color: transparent;
 }
 
-#style-2::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 0px rgba(0,0,0,.3);
-	background-color: transparent;
+#style-2::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, .3);
+  background-color: transparent;
+}
+
+.rdrMonth {
+  width: 100% !important;
+}
+
+.rdrCalenderWrapper {
+  width: 100% !important;
+  font-size: 16px !important;
 }
